# Autonomous-Path-Following-Robot

./: README.md
pfms_ws/doc/: manifest.yaml
pfms_ws/doc/html/: annotated.html  classFollowTrajectory-members.html  classFollowTrajectory.html  classGridProcessing-members.html  classGridProcessing.html  classNavigationProcessing-members.html  classNavigationProcessing.html  classPfmsSample-members.html  classPfmsSample.html  classes.html  dir_000003_000002.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_8531ddb4dd24028bb78f44e29ad3ba2d.html  dir_8531ddb4dd24028bb78f44e29ad3ba2d_dep.map  dir_8531ddb4dd24028bb78f44e29ad3ba2d_dep.md5  dir_99041345173735b4c8999c5797da4d63.html  dir_af73bae20b907094b25036dc44a9f4dc.html  dir_af73bae20b907094b25036dc44a9f4dc_dep.map  dir_af73bae20b907094b25036dc44a9f4dc_dep.md5  files.html  follow__traj_8cpp.html  follow__traj_8cpp__incl.map  follow__traj_8cpp__incl.md5  follow__traj_8cpp_source.html  follow__traj_8h.html  follow__traj_8h__dep__incl.map  follow__traj_8h__dep__incl.md5  follow__traj_8h__incl.map  functions.html  (+67 more)
pfms_ws/src/: pfms_support  quiz10  quiz9  quiz_8b  services_masterclass  services_masterclass_solution  topics_masterclass  topics_masterclass_solutions
pfms_ws/src/path_follower/: CMakeLists.txt  mainpage.dox  package.xml
pfms_ws/src/path_follower/src/: follow_traj.cpp  follow_traj.h  follow_traj_main.cpp  grid_processing.cpp  grid_processing.h  main.cpp  navigation_processing.cpp  navigation_processing.h  sample.cpp  sample.h
pfms_ws/src/path_follower/test/: utest_hd.cpp
pfms_ws/src/path_follower/test/samples/: sample.bag
(+2 files in other folders)
