<?xml version="1.0"?>
<package>
  <name>path_follower</name>
  <version>0.0.2</version>
  <description>pfms A4 Assingment</description>

  <maintainer email="12747150@student.uts.edu.au">Abdelghani Saeed</maintainer>

  <license>MIT</license>

  <author email="Abdelghani.Saeed@student.uts.edu.au">Abdelghani Saeed</author>

  <author email="Alen.Alempijevic@uts.edu.au">Alen Alempijevic</author>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>a4_setup</build_depend> <!-- This package depends on a4_setup, as we use a service declared there -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>a4_setup</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>tf2_ros</build_depend>
  <run_depend>tf2_ros</run_depend>

  <build_depend>tf_conversions</build_depend>
  <run_depend>tf_conversions</run_depend>

  <build_depend>eigen_conversions</build_depend>
  <run_depend>eigen_conversions</run_depend>

</package>

